Optimize memory management and garbage collection settings; update README for clarity on new configurations